// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminEmails /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-hHTYSt SeJTL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with admin user 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBABsx elxOCD admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-cwSeag ldoACd"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with emails 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBABsx elxOCD admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-cwSeag ldoACd"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-dIfARi gupYKT admin-emailsstyles__Count-sc-zq6ujt-2 kkfqmh"
  >
    Showing 
    3
     of 
    3
     emails
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      >
        <a
          class="sc-gikAfH hVsAMM"
          href="/admin/emails?highlight=1"
          id="1"
        >
          <div
            class="sc-ezOQGI jZAtcZ"
          >
            <div
              class="sc-bYMpWt czcfYD"
            />
            <div
              class="sc-kMjNwy kasXmx"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="email-1"
                  >
                    Email 1
                  </h1>
                  <span
                    class="sc-dIfARi gupYKT"
                  >
                    <br />
                    id: 
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-gikAfH hVsAMM"
          href="/admin/emails?highlight=2"
          id="2"
        >
          <div
            class="sc-ezOQGI jZAtcZ"
          >
            <div
              class="sc-bYMpWt czcfYD"
            />
            <div
              class="sc-kMjNwy kasXmx"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="email-2"
                  >
                    Email 2
                  </h1>
                  <span
                    class="sc-dIfARi gupYKT"
                  >
                    <br />
                    id: 
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
        <a
          class="sc-gikAfH hVsAMM"
          href="/admin/emails?highlight=3"
          id="3"
        >
          <div
            class="sc-ezOQGI jZAtcZ"
          >
            <div
              class="sc-bYMpWt czcfYD"
            />
            <div
              class="sc-kMjNwy kasXmx"
            >
              <div
                class="split-detail-itemstyles__Item-sc-5gess9-0 eDQpMP"
              >
                <div
                  class="sc-ksBlkl gDlyuV"
                >
                  <h1
                    class="sc-dkrFOg eRKGDm sc-fEXmlR eZgzot"
                    id="email-3"
                  >
                    Email 3
                  </h1>
                  <span
                    class="sc-dIfARi gupYKT"
                  >
                    <br />
                    id: 
                    3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with initial state 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-hHTYSt SeJTL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bjfHbI ibzWhy"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-bjfHbI jVoIxg"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-idXgbr jlSlT"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loadError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBABsx elxOCD admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-cwSeag ldoACd"
      >
        Reload emails
      </span>
    </button>
  </div>
  <span
    class="sc-dIfARi gupYKT"
  >
    <span
      class="sc-dmctIk etLiaK"
    >
      Could not load emails
      <br />
      Something went wrong
    </span>
  </span>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with loading=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBABsx crSlFX admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      disabled=""
      type="button"
    >
      <span
        class="sc-cwSeag hUEZzG"
      >
        Reload emails
      </span>
      <div
        aria-hidden="true"
        class="sc-lllmON focSiu"
      >
        <div
          class="sc-kgTSHT BbBzy"
        >
          <div
            class="sc-fLcnxK gmOgZi"
          />
          <div
            class="sc-fLcnxK hReprW"
          />
          <div
            class="sc-fLcnxK gTONWR"
          />
          <div
            class="sc-fLcnxK cfUqzA"
          />
          <div
            class="sc-fLcnxK kZCmzD"
          />
          <div
            class="sc-fLcnxK cngVGS"
          />
          <div
            class="sc-fLcnxK fklgdW"
          />
          <div
            class="sc-fLcnxK gzoOKO"
          />
        </div>
      </div>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resendError 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBABsx elxOCD admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-cwSeag ldoACd"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with resending=true 1`] = `
<div>
  <div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <div
        class="sc-kDvujY bJLGdG"
      >
        <a
          class="sc-iBYQkv jNlLug"
          href="/admin"
        >
          ⇠ Admin
        </a>
      </div>
    </div>
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL jiMlto"
      >
        Admin emails
      </h1>
    </div>
  </div>
  <div>
    <button
      class="sc-bBABsx elxOCD admin-emailsstyles__StyledButton-sc-zq6ujt-0 ePDeuD"
      type="button"
    >
      <span
        class="sc-cwSeag ldoACd"
      >
        Reload emails
      </span>
    </button>
  </div>
  <div
    class="split-detail-viewstyles__Outer-sc-1o7lavp-0 ibcJJP admin-emailsstyles__StyledSplitDetailView-sc-zq6ujt-1 yFVod"
  >
    <div
      class="split-detail-viewstyles__ListView-sc-1o7lavp-1 dCCVPP"
    >
      <div
        class="stackstyles__StyledVStack-sc-1m733wj-0 dmknRP"
      />
    </div>
  </div>
</div>
`;

exports[`<AdminEmails /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-ksBlkl gDlyuV"
  >
    <h1
      class="sc-gswNZR gzqAHo sc-fEXmlR cIHzsJ"
      id="admin-only"
    >
      Admin only
    </h1>
    <span
      class="sc-dIfARi gupYKT"
    >
      You need to be logged in with an admin account to view this content.
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="/login"
      >
        Got a different admin account? Log in here.
      </a>
    </span>
  </div>
</div>
`;
